--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,48 @@
-.navbar {
-  background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+.App {
+  text-align: center;
 }
 
-/* #invisible {
-  visibility: hidden;
-} */
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
+
+
+/* .navbar {
+  background-image: linear-gradient(to right, #0f0c29, #302b63, #24243e);
+}
 
 #home-card {
   margin: auto;
@@ -82,4 +120,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
